--- Added checkin and appointment status filters to legacy questionnaires

--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -272,7 +272,7 @@
                 </div>
               </div>    
               <div class="row">
-                <div class="col-md-xs">
+                <div class="col-xs-12">
                   <div ng-repeat="sourceDB in sourceDBList" class="col-xs-4 col-lg-2 item-panel-select"> 
                     <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newAlias.source_db.name == sourceDB.name}" ng-click="sourceDBUpdate(sourceDB)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
                       <div class="panel-info" ng-class="{active: newAlias.source_db.name == sourceDB.name}">
