--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -190,6 +190,9 @@
             </div>
           </div>
           Testing region<br>
+          {{legacyQuestionnaire.occurrence.frequency}}<br>
+          {{customFrequency}}<br>
+          {{additionalMeta}}<br>
           
         </div>
         <div class="row" style="margin-bottom:10px;">
