--- Able to retrieve frequency settings from the database

--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -158,7 +158,7 @@
                     <span ng-if="selectedMonthsInYear.length > 1">each</span>
                     <span ng-if="selectedMonthsInYear.length < 2">the</span>
                   month</span>
-                  <span ng-if="selectedWeekNumberInMonth.id && selectedSingleDayInWeek.id">on the {{selectedWeekNumberInMonthText}} of 
+                  <span ng-if="selectedWeekNumberInMonth.id && selectedSingleDayInWeek.id">on the {{selectedWeekNumberInMonthText}} {{selectedSingleDayInWeekText}} of 
                   <span ng-if="selectedMonthsInYear.length > 1">each</span>
                   <span ng-if="selectedMonthsInYear.length < 2">the</span>
                     month</span>
