--- Fixed crashes     --- Almost completed the publisher of legacy questionnaires based on frequency filters

--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -189,6 +189,7 @@
               </p>
             </div>
           </div>
+          {{legacyQuestionnaire.occurrence}}
           
         </div>
         <div class="row" style="margin-bottom:10px;">
